--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
 
         <section class="container">
-            <h1>Calculadora</h1>
             <div class="visor">
                     0
             </div>
@@ -39,11 +38,11 @@
                     <div class="button" id="three">3</div>
                     <div class="button" id="clear">C</div>
                 </div>
-                <div>
-                    <div class="button" id="division">/</div>
-                    <div class="button" id="multiplication">*</div>
-                    <div class="button" id="subtraction">-</div>
-                    <div class="button" id="addition">+</div>
+                <div >
+                    <div class="button sinais" id="division">&divide</div>
+                    <div class="button sinais" id="multiplication">&times</div>
+                    <div class="button sinais" id="subtraction">-</div>
+                    <div class="button sinais" id="addition">+</div>
                 </div>
 
             </div>
